...
    <Spinner
        android:id="@+id/selectCourseSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Subject (e.g. CSE)" />

    <EditText
        android:id="@+id/editCourseNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="Course Number (e.g. 110)" />

    <Button
        android:id="@+id/enterCourseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter" />

    <Button
        android:id="@+id/doneAddingClasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done" />
</LinearLayout>
